# ringo

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  ringo.cabal  stack.yaml
app/: Main.hs
app/Distribution/: CurrentPackageDescription.hs
app/Ringo/: ArgParser.hs  InputParser.hs
src/: Ringo.hs
src/Ringo/: Extractor.hs  Generator.hs  Types.hs  Utils.hs  Validator.hs
src/Ringo/Extractor/: Internal.hs
src/Ringo/Generator/: Create.hs  Internal.hs  Sql.hs
src/Ringo/Generator/Populate/: Dimension.hs  Fact.hs
src/Ringo/Types/: Internal.hs
test/: doctests.hs
