name:                ringo
version:             0.1.0.0
synopsis:            Tool to transform OLTP schemas to OLAP star schemas automatically
description:         Please see README.md
homepage:            http://github.com/quintype/ringo#readme
license:             MIT
license-file:        LICENSE
author:              Abhinav Sarkar
maintainer:          abhinav@abhinavsarkar.net
copyright:           2015 Quintype Inc, Nilenso Software LLP
category:            SQL
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Ringo,
                       Ringo.Types
  other-modules:       Ringo.Extractor,
                       Ringo.Generator,
                       Ringo.Validator,
                       Ringo.Extractor.Internal,
                       Ringo.Utils
  build-depends:       base       >=4.7 && <5,
                       text       >=1.2 && <1.3,
                       containers >=0.5 && <0.6,
                       mtl        >=2.1 && <2.3
  ghc-options:         -Wall -fno-warn-unused-do-bind -funbox-strict-fields -fno-warn-orphans -O2
  default-extensions:  OverloadedStrings, RecordWildCards, ScopedTypeVariables, BangPatterns,
                       TupleSections, CPP, NamedFieldPuns
  default-language:    Haskell2010

executable ringo
  hs-source-dirs:      app
  other-modules:       Ringo.ArgParser,
                       Ringo.InputParser
  main-is:             Main.hs
  build-depends:       base                 >=4.7     && <5,
                       text                 >=1.2     && <1.3,
                       bytestring           >=0.10    && <0.11,
                       containers           >=0.5     && <0.6,
                       optparse-applicative >=0.11    && <0.12,
                       yaml                 >=0.8.11  && <0.9,
                       vector               >=0.10    && <0.11,
                       directory            >=1.2     && <1.3,
                       filepath             >=1.3     && <1.5,
                       aeson                >=0.8     && <0.9,
                       ringo
  ghc-options:         -Wall -fno-warn-unused-do-bind -funbox-strict-fields -fno-warn-orphans -O2
  default-extensions:  OverloadedStrings, RecordWildCards, ScopedTypeVariables, BangPatterns,
                       TupleSections, CPP, NamedFieldPuns
  default-language:    Haskell2010

test-suite ringo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ringo
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quintype/ringo
